Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27275

Galera cluster joiner node does not properly parse the IPv6 address from the wsrep allowlist.

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.8(EOL)
    • 10.8.0
    • Galera
    • None

    Description

      Galera cluster joiner node does not remove the square bracket from the IPv6 address to validate the IP address from the wsrep allowlist.

      node1:root@localhost> select * from mysql.wsrep_allowlist;
      +-----+
      | ip  |
      +-----+
      | ::1 |
      +-----+
      1 row in set (0.002 sec)
       
      node1:root@localhost> show variables like  '%wsrep%address%';
      +-----------------------------+----------------------------------+
      | Variable_name               | Value                            |
      +-----------------------------+----------------------------------+
      | wsrep_cluster_address       | gcomm://[::1]:39898,[::1]:16467, |
      | wsrep_node_address          | ::1                              |
      | wsrep_node_incoming_address | ::1                              |
      | wsrep_sst_receive_address   | [::1]:34918                      |
      +-----------------------------+----------------------------------+
      4 rows in set (0.002 sec)
       
      node1:root@localhost> 
      

      Node2 cnf

      wsrep_cluster_address=gcomm://[::1]:39898,[::1]:16467,
      wsrep_allowlist="::1"
      wsrep_provider_options="gmcast.listen_addr=tcp://[::1]:16467;ist.recv_addr=[::1]:31723;"
      wsrep_sst_receive_address='[::1]:39457'
      wsrep_node_address=::1
      wsrep_node_incoming_address=::1
       
      
      

      Node 1 log

      2021-12-15 19:45:14 0 [Warning] WSREP: Connection not allowed, IP [::1] not found in allowlist.
      2021-12-15 19:45:15 0 [Warning] WSREP: Connection not allowed, IP [::1] not found in allowlist.
      2021-12-15 19:45:17 0 [Warning] WSREP: Connection not allowed, IP [::1] not found in allowlist.
      2021-12-15 19:45:18 0 [Warning] WSREP: Connection not allowed, IP [::1] not found in allowlist.
      2021-12-15 19:45:20 0 [Warning] WSREP: Connection not allowed, IP [::1] not found in allowlist.
      2021-12-15 19:45:21 0 [Warning] WSREP: Connection not allowed, IP [::1] not found in allowlist.
      2021-12-15 19:45:23 0 [Warning] WSREP: Connection not allowed, IP [::1] not found in allowlist.
      2021-12-15 19:45:24 0 [Warning] WSREP: Connection not allowed, IP [::1] not found in allowlist.
      2021-12-15 19:45:26 0 [Warning] WSREP: Connection not allowed, IP [::1] not found in allowlist.
      2021-12-15 19:45:27 0 [Warning] WSREP: Connection not allowed, IP [::1] not found in allowlist.
      

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              ramesh Ramesh Sivaraman
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2.5h
                  2.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.